@@ -921,8 +921,8 @@ ul.toc {list-style: none}
 <h1>Short Table of Contents</h1>
 <div class="shortcontents">
 <ul class="toc">
-<li><a name="stoc-chapter-1" href="chapter.html#chapter">1. chapter</a></li>
-<li><a name="stoc-chapter-2" href="#chapter2">2. chapter 2</a></li>
+<li><a name="stoc-chapter-1" href="#toc-chapter-1">1. chapter</a></li>
+<li><a name="stoc-chapter-2" href="#toc-chapter-2">2. chapter 2</a></li>
 </ul>
 </div>
 <hr size="1">
